--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,10 +35,10 @@
                           </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('login') }}">Iniciar sesión</a>
+                            <a class="nav-link" href="{{ url_for('login') }}">Inicia sesión</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('register') }}">Registrarse</a>
+                            <a class="nav-link" href="{{ url_for('register') }}">Registrarte</a>
                         </li>
                     {% endif %}
                 </ul>
@@ -63,7 +63,7 @@
 
     <footer class="bg-dark text-white text-center py-3 mt-5">
         <div class="container">
-            <p class="mb-0">Blog Flask &copy; {{ now.year }}</p>
+            <p class="mb-0">@copyright JuanJoSempai &copy; {{ now.year }}</p>
         </div>
     </footer>
 
